Adding GetRatings endpoint
