# cmd/handlers/catalog_items_handler.go
@@ -4,10 +4,12 @@ import (
 	"context"
 	"fmt"
 	"net/http"
+	"strconv"
 	"time"
 
 	"github.com/rhpds/zerotouch-api/cmd/log"
 	"github.com/rhpds/zerotouch-api/cmd/models"
+	"github.com/rhpds/zerotouch-api/cmd/ratings"
 	"github.com/rhpds/zerotouch-api/cmd/recaptcha"
 )
 
@@ -23,17 +25,20 @@ type CatalogItemsHandler struct {
 	catalogItemsController *models.CatalogItemsController
 	rcController           *models.ResourceClaimsController
 	recaptchaConfig        *RecaptchaConfig
+	ratingsClient          *ratings.RatingClient
 }
 
 func NewCatalogItemsHandler(
 	catalogItemsController *models.CatalogItemsController,
 	rcController *models.ResourceClaimsController,
 	recaptchaConfig *RecaptchaConfig,
+	ratingsClient *ratings.RatingClient,
 ) *CatalogItemsHandler {
 	return &CatalogItemsHandler{
 		catalogItemsController: catalogItemsController,
 		rcController:           rcController,
 		recaptchaConfig:        recaptchaConfig,
+		ratingsClient:          ratingsClient,
 	}
 }
 
@@ -214,6 +219,24 @@ func (h *CatalogItemsHandler) Health(
 
 	return Health200JSONResponse{
 		Status: &status,
+	}, nil
+}
+
+func (h *CatalogItemsHandler) GetRating(
+	ctx context.Context,
+	request GetRatingRequestObject,
+) (GetRatingResponseObject, error) {
+	rating, err := h.ratingsClient.GetRatings(request.Name)
+	if err != nil {
+		return GetRating500JSONResponse(Error{
+			Code:    http.StatusInternalServerError,
+			Message: err.Error(),
+		}), nil
+	}
+
+	return GetRating200JSONResponse{
+		RatingScore:  fmt.Sprintf("%.1f", rating.RatingScore),
+		TotalRatings: strconv.Itoa(rating.TotalRatings),
 	}, nil
 }
 
